--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "2023.08.01rc2"
 authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
 readme = "README.md"
 requires-python = ">=3.6"
-dependencies = ["rich", "typer"]
+dependencies = ["rich", "typer", "pandas"]
 license = {file = "LICENSE"}
 homepage = "https://github.com/mmngreco/takt"
 description = "Takt is a CLI tool for tracking time."
