Fix version in pyproject.toml
Closes #6

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "takt"
-version = "2023.11.02-5-gfdb802c"
+version = "2023.11.02dev1"
 authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
 readme = "README.md"
 requires-python = ">=3.6"
