Refactor Makefile, Update Documentation, and Enhance Functionality (#5)
* enh: refactor

* enh: plugins working

* update makefile

* switch to setuptools from flit

* Bump version 2023.11.02-5-gfdb802c

* enh(readme): add plugin section.

* enh: refactorize Aggrection.calculate.

* minor change

* Fix version in pyproject.toml

Closes #6

* cln(pyproject): remove homepage from project section

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,15 @@
 [build-system]
-requires = ["flit_core >=2,<4"]
-build-backend = "flit_core.buildapi"
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "takt"
-version = "2023.11.02"
+version = "2023.11.02dev1"
 authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
 readme = "README.md"
 requires-python = ">=3.6"
 dependencies = ["rich", "typer", "pandas"]
 license = {file = "LICENSE"}
-homepage = "https://github.com/mmngreco/takt"
 description = "Takt is a CLI tool for tracking time."
 
 
