--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "2023.11.02dev1"
 authors = [{name="Max Greco", email="mmngreco@gmail.com"}]
 readme = "README.md"
 requires-python = ">=3.6"
-dependencies = ["rich", "typer", "pandas"]
+dependencies = ["rich", "typer", "pandas", "GitPython"]
 license = {file = "LICENSE"}
 description = "Takt is a CLI tool for tracking time."
 
